---------------------------------------------------------------------------------------------------
Version: 0.12.3
Date: 08. 09. 2021
  Changed:
    - Balancing - Wooden barricade no longer requires research to unlock
    - Balancing - Fixed fuel value of Wooden barricade being too overpowered
  Bugfixes:
    - Fixed lamp signal colours not working for science packs
    - Increased search radius for lamps to stop glowing lamp flicker when it comes in range
    - Add missing icon_mipmaps parameter to technology icons
  Locales:
    - Updated Italian translation (thanks to diego.crosera and andrea.gomarasca)
    - Updated Polish translation (thanks to no_desired_username)
    - Updated Spanish translation (thanks to AgnotSeeker)
---------------------------------------------------------------------------------------------------
Version: 0.12.2
Date: 14. 12. 2020
  Bugfixes:
    - Fixed tree item icons when using Alien Biomes mod version 0.6.2
  Locales:
    - Added Italian translation (thanks to diego.crosera)
    - Updated Korean translation (thanks to GimoXagros)
    - Updated German translation (thanks to adoa)
    - Updated Hungarian translation (thanks to mmnetworkteam)
---------------------------------------------------------------------------------------------------
Version: 0.12.1
Date: 25. 11. 2020
  Bugfixes:
    - Fixed an issue when loading previous saves
  Removed:
    - Obsolete migrations from Factorio 0.17 and earlier
  Locales:
    - Updated Russian translation (thanks to 1avek1)
---------------------------------------------------------------------------------------------------
Version: 0.12.0
Date: 24. 11. 2020
  Added:
    - Support for Factorio 1.1
  Changed:
    - Re-ordered signal colours to maintain vanilla priority order (thanks to dbiser99)
    - Technology names now use their singular form
    - Adjusted technology icons