@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.12.3
 Date: 08. 09. 2021
+  Added:
+    - Lamps and Glowing lamps are now fast replacable with normal Lamps
   Changed:
     - Balancing - Wooden barricade no longer requires research to unlock
     - Balancing - Fixed fuel value of Wooden barricade being too overpowered
